impemented all the must have and should have features